ChangeLog 'ClusteringSuite'

YYYY-MM-DD  John Doe  <johndoe@example.com>

	* myfile.ext (myfunction): my changes made
	additional changes

	* myfile.ext (unrelated_change): my changes made
	to myfile.ext but completely unrelated to the above

	* anotherfile.ext (somefunction): more changes

2011-11-24 Juan Gonzalez <juan.gonzalez@bsc.es>
	* Added a facade object 'HullModel' to make transparent the 'ConvexHullModel'
	object. *Some memory leaks regarding the 'HullModel' container destruction
	could have been added*

	* Improvement on building system to correctly propagate the library 
	modifications to the 'TreeDBSCAN' source files

	* Solved a bug when compiling without SeqAn support

2011-11-22 German Llort <german.llort@bsc.es>
	* Modified script 'Tree_DBSCAN_env.sh' to set the proper environment

	* Fixed bug in gmp_mpfr.m4 (mpfr_libsdir path was wrong) and configure.ac.template to set the proper libsdir paths

2011-11-22 German Llort <german.llort@bsc.es>
	* Makefiles in TreeDBSCAN changed to generated static binaries

	* Tree_DBSCAN_env.sh now sets the ClusteringSuite libraries directory in
	the LD_LIBRARY_PATH

2011-11-22 German Llort <german.llort@bsc.es>
	* TreeDBSCAN MRNet protocol separated into 3 independent libraries
	for external use (lib*TreeDBSCAN)

	* Serialization and transmission of convex hulls over the MRNet
	centralized in HullManager.cpp

	* Added on-line back-end that extracts data from a tracing library

	* Modified 'clustering-config' script

2011-11-21 Juan Gonzalez <juan.gonzalez@bsc.es>
	* Changed the name of 'sourceme.sh' to 'Tree_DBSCAN_env.sh'

	* Added 'EXTRA_DIST' to 'clustering-config' script

	* Minor version incresed to '2'

2011-11-21 German Llort <german.llort@bsc.es>
	* Added 'clustering-config' script

2011-11-21 German Llort <german.llort@bsc.es>
	* Added 'substitute' and 'substitute-all' scripts

2011-11-21 Juan Gonzalez <juan.gonzalez@bsc.es>
	* Added 'TreeDBSCAN' source tree.
